fixed reponsivness on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -227,6 +227,10 @@ select {
     color: var(--primary-color);
     transform: translateX(4px);
 }
+.projects-list a.active {
+    background: var(--bg-light);
+    color: var(--primary-color);
+}
 
 header {
     padding-bottom: 0.75rem;
@@ -552,18 +556,35 @@ header h2 {
 }
 
 @media (max-width:600px) {
+    main {
+        width: 100%;
+    }
     header h2 {
         font-size: 1.15rem;
     }
 
-    .search-box input {
-        width: 120px;
-    }
-
     .todo {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 0.75rem;
+        align-items: center;
+        padding: 0.25rem;
+        overflow: hidden;
+        
+    }
+    .todo .todo-content {
+        overflow: hidden;
+        width: 60%;
+    }
+    .todo .btn {
+        font-size: 0.5rem;
+    }
+    .todo-checkbox {
+        width: 15px;
+        height: 15px;
+    }
+    #deleteTodoBtn {
+        right: 0.5rem;
+    }
+    #editTodoBtn {
+        right: 3.3rem;
     }
 
     .todo-priority {
